Add travis secret keys

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: /
 
 # Website info
 title: SEA Lab
-description: Software Engineering Automation lab
+description: Software Engineering and Analytics Laboratory
 cover: assets/images/blog-cover.jpg
 logo: assets/images/blog-icon.png
 logo_dark: assets/images/favicon.png
