Updated some configurations

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -74,3 +74,10 @@ martin:
   facebook: False
   twitter: False
   cover: False
+
+mj:
+  username: mjafarmashhadi
+  name: Mohammad Jafar Mashhadi
+  location: Calgary, Alberta
+  url: https://mjafar.me
+  bio: An ordinary genius.
