--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -1,7 +1,7 @@
-speeches:
-  name: speeches
-  description: Some of the greatest words ever spoken.
-  cover: assets/images/speeches.jpg
+announcements:
+  name: announcements
+  description: Laboratory announcements
+  cover: False
 fiction:
   name: fiction
   description: False
@@ -10,7 +10,3 @@ fables:
   name: fables
   description: A series of short stories that make you think.
   cover: assets/images/fables.jpg
-getting-started:
-  name: getting-started
-  description: False
-  cover: False
