Added the people page

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Jekyll configuration
 markdown: kramdown
 highlighter: rouge
-paginate: 100 # it will paginate after this number
+paginate: 10 # it will paginate after this number
 language: 'en-ca'
 words_per_minute: 200
 
@@ -12,19 +12,26 @@ baseurl: /
 title: SEA Lab
 description: Software Engineering and Analytics Laboratory
 cover: assets/images/blog-cover.jpg
-logo: assets/images/blog-icon.png
+logo: assets/images/name-and-logo.png
 logo_dark: assets/images/favicon.png
 favicon: assets/images/favicon.png
 production_url: https://sea-leb.github.io/
 source_url: https://github.com/sea-lab/sea-lab.github.io/
+people_order: 
+  - 'faculty'
+  - 'postdoc'
+  - 'phd'
+  - 'masters'
+  - 'undergrad'
+
 CNAME: #add cname for website to be created
 
 # Social info
 navigation: True # show the navbar links
-subscribers: True # you need to connect an external service for this to work,
+subscribers: False # you need to connect an external service for this to work,
 # if 'True' the submit button is disabled for now, but you can change that
 # by editing `_includes/subscribe-form.html`
-twitter: hadihemmati # replace by your username
+twitter: hemmatihadi # replace by your username
 facebook: False # replace by your username
 
 # Disqus
@@ -94,3 +101,4 @@ exclude:
   - changelog.md
   - "*.Rmd"
   - .git*
+  - "*.psd"
