--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -36,6 +36,7 @@ shayan:
   section: masters
   current: True
   picture: assets/images/people/shayan.jpg
+  linkedin: shayanzamani
 mj:
   username: mjafar
   name: Mohammad Jafar Mashhadi
