Update hadi's info

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,8 +3,8 @@ hadi:
   name: Hadi Hemmati
   url: Schulich Homepage
   url_full: https://schulich.ucalgary.ca/hemmati/
-  bio: Best supervisor ever.
-  long_bio: Faculty member. Tenure associate professor at Schulich School of Engineering, University of Calgary
+  long_bio: Hadi is an assistant professor in Software Engineering at Electrical and Computer Engineering department, University of Calgary. He also holds an adjunct position at computer science department, University of Manitoba, where he used to work prior to joining UCalgary in Jan 2017.
+  bio: Faculty member. Tenure associate professor at Schulich School of Engineering, University of Calgary
   twitter: hemmatihadi
   picture: assets/images/people/hadi.jpg
   section: faculty
