--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -1,4 +1,12 @@
 _2019:
+  - title: 'Interactive Semi-automated SpecificationMining for Debugging: An Experience Report'
+    link: False
+    venue: Elsevier IST
+    authors:
+      - Mohammad Jafar Mashhadi
+      - Taha Rihmann Siddiqui
+      - Hadi Hemmati
+      - Howard Loewen
   - title: Advances in Techniques for Test Prioritization
     link: https://www.sciencedirect.com/science/article/pii/S0065245817300566
     abstract: With the increasing size of software systems and the continuous changes that are committed to the software's codebase, regression testing has become very expensive for real-world software applications. Test case prioritization is a classic solution in this context. Test case prioritization is the process of ranking existing test cases for execution with the goal of finding defects sooner. It is useful when the testing budget is limited and one needs to limit their test execution cost, by only running top n test cases, according to the testing budget. There are many heuristics and algorithms to rank test cases. In this chapter, we will see some of the most common test case prioritization techniques from software testing literature as well as trends and advances in this domain.
