--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -97,3 +97,12 @@ _2017:
       - Gordon Fraser
       - Andrea Arcuri
       - Jānis Benefelds
+_2016:
+  - title: The risk-utility tradeoff for data privacy models
+    link: papers/2016-AlmasiSiddiqiMohammedHemmati-The.pdf
+    venue: NTMS 2016
+    authors:
+      - M Moein Almasi 
+      - Taha R Siddiqui
+      - Noman Mohammed
+      - Hadi Hemmati
