--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -110,7 +110,7 @@ arefin:
 fateme:
   current: False
   section: masters
-  name: Fatemeh Sharif
+  name: Fatemeh Sharifi
 tanzeem:
   current: False
   section: masters
