Add MJ's twitter handle

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -42,6 +42,7 @@ mj:
   name: Mohammad Jafar Mashhadi
   url: mjafar.me
   url_full: https://mjafar.me
+  twitter: MashhadiMJ
   bio: |
     Mohammad Jafar (MJ) is doing his MSc on Specification Mining and Software Testing here at SEA lab. His research
     is in collaboration with <a href="https://www.micropilot.com/" rel="nofollow" target="_blank">Micropilot Inc</a>, 
