--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -1,4 +1,10 @@
 _2019:
+  - title: 'Revisiting Hyper-Parameter Tuning for Search-based Test Data Generation'
+    link: https://arxiv.org/
+    venue: SSBSE 2019
+    authors:
+      - Shayan Zamani
+      - Hadi Hemmati
   - title: 'Interactive Semi-automated SpecificationMining for Debugging: An Experience Report'
     link: https://arxiv.org/pdf/1905.02245.pdf
     venue: Elsevier IST
