--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -1,6 +1,6 @@
 _2019:
   - title: 'Revisiting Hyper-Parameter Tuning for Search-based Test Data Generation'
-    link: https://arxiv.org/
+    link: http://arxiv.org/abs/1906.02349
     venue: SSBSE 2019
     authors:
       - Shayan Zamani
